[gd_scene load_steps=16 format=2]

[ext_resource path="res://mobile/MobileUI.gd" type="Script" id=1]
[ext_resource path="res://mobile/joystick2.png" type="Texture" id=2]
[ext_resource path="res://mobile/joystick1.png" type="Texture" id=3]
[ext_resource path="res://mobile/joystick3.png" type="Texture" id=4]
[ext_resource path="res://mobile/MobileJoystick.gd" type="Script" id=5]
[ext_resource path="res://mobile/attack1.png" type="Texture" id=6]
[ext_resource path="res://mobile/dash1.png" type="Texture" id=7]
[ext_resource path="res://mobile/jump2.png" type="Texture" id=8]
[ext_resource path="res://mobile/attack2.png" type="Texture" id=9]
[ext_resource path="res://mobile/jump1.png" type="Texture" id=10]
[ext_resource path="res://mobile/dash2.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[sub_resource type="CircleShape2D" id=3]
radius = 50.0

[sub_resource type="CircleShape2D" id=4]
radius = 50.0

[node name="MobileUI" type="Node2D"]
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 1 )

[node name="JoystickOut" type="Sprite" parent="."]
position = Vector2( 99.336, 620.384 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="JoystickIn" type="TouchScreenButton" parent="JoystickOut"]
normal = ExtResource( 2 )
pressed = ExtResource( 4 )
shape = SubResource( 1 )
script = ExtResource( 5 )

[node name="ButtonJump" type="TouchScreenButton" parent="."]
position = Vector2( 1153.32, 594.278 )
normal = ExtResource( 10 )
pressed = ExtResource( 8 )
shape = SubResource( 2 )

[node name="ButtonAttack" type="TouchScreenButton" parent="."]
position = Vector2( 1039.55, 594.393 )
normal = ExtResource( 6 )
pressed = ExtResource( 9 )
shape = SubResource( 3 )

[node name="ButtonDash" type="TouchScreenButton" parent="."]
position = Vector2( 1150.46, 480.264 )
normal = ExtResource( 7 )
pressed = ExtResource( 11 )
shape = SubResource( 4 )
